--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ env:
     - TOX_ENV=py27-djangomaster
 
 install:
-  - pip install tox
+    - pip install tox coveralls
 
 script:
     - tox -e $TOX_ENV
+after_success: coveralls
