--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ install:
 
 script:
     - tox -e $TOX_ENV
-after_script: coveralls
+    - coverage run --source="hitcount" -a runtests.py
+after_success: coveralls
