--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
     - TOX_ENV=py27-djangomaster
 
 install:
-    - pip install tox coveralls
+    - pip install tox coveralls Django
 
 script:
     - tox -e $TOX_ENV
