coverage to tox

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist =
        {py27}-django{17,18,master},
 
 [testenv]
-commands = ./runtests.py
+commands = coverage run --source="hitcount" runtests.py
 setenv =
        PYTHONDONTWRITEBYTECODE=1
 deps =
