--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include README.md
+include README.rst
 recursive-include hitcount/locale *
 recursive-include hitcount/management *
 recursive-include hitcount/templatetags *
