--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist =
        {py26,py27}-django14,
        {py26,py27,py32,py33,py34}-django{15,16},
-       {py27,py32,py33,py34}-django{17,18,master},
+       {py27,py32,py33,py34}-django{17,18},
+       {py27,py34,py35}-djangomaster
 
 [testenv]
 commands = coverage run --source="hitcount" runtests.py
