--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist =
        {py26,py27}-django14,
        {py26,py27,py32,py33,py34}-django{15,16},
        {py27,py32,py33,py34}-django{17,18},
-       {py27,py34,py35}-djangomaster
+       {py27,py34}-djangomaster
 
 [testenv]
 commands = coverage run --source="hitcount" runtests.py
