--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,7 @@
+[bdist_wheel]
+universal=1
+
 [flake8]
-exclude = build,.git,
+exclude = build,.git,dist,django_hitcount.egg-info
 ignore = E123,E128,E402,E501,W503,E731,W601
 max-line-length = 119
