Requirements and supported versions up-to-date
Support Django/Python versions as of October 2015.  Remove try/excepts that are for older versions.

--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,16 @@
 [tox]
 envlist =
-       {py26,py27}-django14,
-       {py26,py27,py32,py33,py34}-django{15,16},
        {py27,py32,py33,py34}-django{17,18},
-       {py27,py34}-djangomaster
+       {py27,py34,py35}-djangomaster
 
 [testenv]
 commands = coverage run --source="hitcount" runtests.py
 setenv =
        PYTHONDONTWRITEBYTECODE=1
 deps =
-       django14: Django==1.4.22
-       django15: Django==1.5.12
-       django16: Django==1.6.11
+
        django17: Django==1.7.10
-       django18: Django==1.8.4
+       django18: Django==1.8.5
        djangomaster: https://github.com/django/django/archive/master.tar.gz
        -rtests/requirements.txt
 
