--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,5 +1,6 @@
-pytest==2.7.1
-pytest-django==2.8.0
+pytest==2.8.1
+pytest-django==2.9.1
 mock==1.3.0
 coverage==3.7.1  # version 4.0 is throwing errors in Python3.2
 tox==2.1.1
+selenium==2.47.3
