--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,6 @@ install:
 script:
     - tox -e $TOX_ENV
 after_success: coveralls
+before_install:
+    - "export DISPLAY=:99.0"
+    - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
