--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,12 @@ env:
     - TOX_ENV=py27-djangomaster
     - TOX_ENV=py34-djangomaster
     - TOX_ENV=py35-djangomaster
-
 install:
     - pip install tox coveralls
-
 script:
     - tox -e $TOX_ENV
 after_success: coveralls
 before_install:
     - "export DISPLAY=:99.0"
     - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+    - sleep 3
