--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ install:
 script:
     - tox -e $TOX_ENV
 after_success: coveralls
-before_install:
+before_script:
     - "export DISPLAY=:99.0"
     - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
-    - sleep 3
