try with default python environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-python: 3.5
+# python: 3.5
 sudo: false
 env:
     - TOX_ENV=py34-django18
@@ -12,7 +12,7 @@ env:
     - TOX_ENV=py27-django17
     - TOX_ENV=py27-djangomaster
     - TOX_ENV=py34-djangomaster
-    - TOX_ENV=py35-djangomaster
+    # - TOX_ENV=py35-djangomaster
 install:
     - pip install tox coveralls
 script:
