giving travis another try

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-# python: 3.5
+python: 3.5
 sudo: false
 env:
     - TOX_ENV=py34-django18
@@ -12,12 +12,13 @@ env:
     - TOX_ENV=py27-django17
     - TOX_ENV=py27-djangomaster
     - TOX_ENV=py34-djangomaster
-    # - TOX_ENV=py35-djangomaster
+    - TOX_ENV=py35-djangomaster
 install:
     - pip install tox coveralls
 script:
     - tox -e $TOX_ENV
 after_success: coveralls
-before_script:
+before_install:
     - "export DISPLAY=:99.0"
-    - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+    - "sh -e /etc/init.d/xvfb start"
+    - sleep 3 # give xvfb some time to start
