pass environmental variable to tox

--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,8 @@ commands = coverage run --source="hitcount" runtests.py
 setenv =
        PYTHONDONTWRITEBYTECODE=1
 deps =
-
        django17: Django==1.7.10
        django18: Django==1.8.5
        djangomaster: https://github.com/django/django/archive/master.tar.gz
        -rtests/requirements.txt
-
+passenv = TRAVIS
