--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,6 @@
 universal=1
 
 [flake8]
-exclude = build,.git,dist,django_hitcount.egg-info
+exclude = build,.git,dist,django_hitcount.egg-info,docs
 ignore = E123,E128,E402,E501,W503,E731,W601
 max-line-length = 119
