flake8 - E128 required now

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,5 +3,5 @@ universal=1
 
 [flake8]
 exclude = build,.git,dist,django_hitcount.egg-info,docs
-ignore = E123,E128,E402,E501,W503,E731,W601
+ignore = E123,E402,E501,W503,E731,W601
 max-line-length = 119
