--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,15 @@
 [tox]
 envlist =
-       {py27,py32,py33,py34}-django{17,18},
-       {py27,py34,py35}-djangomaster
+       {py27,py32,py33,py34}-django{18},
+       {py27,py34,py35}-django{19,master}
 
 [testenv]
 commands = coverage run --source="hitcount" runtests.py
 setenv =
        PYTHONDONTWRITEBYTECODE=1
 deps =
-       django17: Django==1.7.10
-       django18: Django==1.8.5
+       django18: Django==1.8.7
+       django19: Django==1.9
        djangomaster: https://github.com/django/django/archive/master.tar.gz
        -rtests/requirements.txt
 passenv = TRAVIS
