--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,7 +1,7 @@
-coverage==3.7.1  # version 4.0 is throwing errors in Python3.2
-flake8==2.5.2
-mock==1.3.0
-pytest==2.8.7
+coverage==4.0.3
+flake8==2.5.4
+mock==2.0.0
+pytest==2.9.1
 pytest-django==2.9.1
-selenium==2.50.1
+selenium==2.53.2
 tox==2.3.1
