--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-       {py27,py32,py33,py34}-django{18},
+       {py27,py33,py34}-django{18},
        {py27,py34,py35}-django{19,master}
 
 [testenv]
@@ -8,8 +8,8 @@ commands = coverage run --source="hitcount" runtests.py
 setenv =
        PYTHONDONTWRITEBYTECODE=1
 deps =
-       django18: Django==1.8.9
-       django19: Django==1.9.2
+       django18: Django==1.8.13
+       django19: Django==1.9.6
        djangomaster: https://github.com/django/django/archive/master.tar.gz
        -rtests/requirements.txt
 passenv = TRAVIS
