--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,17 @@
 [tox]
 envlist =
-       {py27,py33,py34}-django{18},
-       {py27,py34,py35}-django{19,110,master}
+       {py27,py34}-django{18},
+       {py27,py34,py35,py36}-django{110,111}
+       # {py34,py35,py36}-django{master}
 
 [testenv]
 commands = coverage run --source="hitcount" runtests.py
 setenv =
        PYTHONDONTWRITEBYTECODE=1
 deps =
-       django18: Django==1.8.15
-       django19: Django==1.9.10
-       django110: Django==1.10.1
-       djangomaster: https://github.com/django/django/archive/master.tar.gz
+       django18: Django==1.8.18
+       django110: Django==1.10.8
+       django111: Django==1.11.5
+       # djangomaster: https://github.com/django/django/archive/master.tar.gz
        -rtests/requirements.txt
 passenv = TRAVIS
