--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: python
-python: 3.5
+python:
+    - 2.7
+    - 3.4
+    - 3.5
+    - 3.6
 sudo: false
 env:
     - TOX_ENV=py27-django18
     - TOX_ENV=py34-django18
-    - TOX_ENV=py33-django18
     - TOX_ENV=py27-django110
     - TOX_ENV=py34-django110
     - TOX_ENV=py35-django110
