--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,12 @@ envlist =
        {py27,py34,py35,py36}-django{110,111}
        # {py34,py35,py36}-django{master}
 
+[tox:travis]
+   2.7 = py27
+   3.4 = py34
+   3.5 = py35
+   3.6 = py36
+
 [testenv]
 commands = coverage run --source="hitcount" runtests.py
 setenv =
