--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ env:
     - TOX_ENV=py27-django110
     - TOX_ENV=py34-django110
     - TOX_ENV=py35-django110
-    - TOX_ENV=py36-django110
+    # - TOX_ENV=py36-django110
     - TOX_ENV=py27-django111
     - TOX_ENV=py34-django111
     - TOX_ENV=py35-django111
-    - TOX_ENV=py36-django111
+    # - TOX_ENV=py36-django111
 install:
     - pip install --upgrade pip
     - pip install tox coveralls
