Dropped support for Python 2.x

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-       {py27,py34}-django{18},
-       {py27,py34,py35,py36}-django{111},
+       {py34}-django{18},
+       {py34,py35,py36}-django{111},
        {py34,py35,py36}-django{20}
        # {py34,py35,py36}-django{master}
 
