--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,25 @@
 [tox]
+distribute = False
 envlist =
-       {py34}-django{18},
-       {py34,py35,py36}-django{111},
-       {py34,py35,py36}-django{20}
-       # {py34,py35,py36}-django{master}
+    py{36,37,38,39}-dj{22,30,31,32}
+skip_missing_interpreters = True
+
+[travis]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
 
 [testenv]
-commands = coverage run --source="hitcount" runtests.py
+usedevelop = True
+extras = test
 setenv =
-       PYTHONDONTWRITEBYTECODE=1
+    PYTHONDONTWRITEBYTECODE=1
 deps =
-       django18: Django==1.8.19
-       django111: Django==1.11.11
-       django20: Django==2.0.3
-       # djangomaster: https://github.com/django/django/archive/master.tar.gz
-       -rtests/requirements.txt
-passenv = TRAVIS
-
-[travis:env]
-DJANGO =
-    1.8: django18
-    1.11: django111
-    2.0: django20
+    dj22: Django>=2.2,<3.0
+    dj30: Django>=3.0,<3.1
+    dj31: Django>=3.1,<3.2
+    dj32: Django>=3.2,<4.0
+    -rtests/requirements.txt
+commands = coverage run --source="hitcount" runtests.py
